--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,35 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
-alembic==1.12.1
-pydantic==2.5.0
-pydantic-settings==2.1.0
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
+# === Core Dependencies ===
+fastapi==0.115.14
+uvicorn[standard]==0.34.3
+pydantic==2.11.7
+pydantic-settings==2.10.1
+
+# === Database ===
+sqlalchemy==2.0.41
+alembic==1.16.2
+# MySQL
+PyMySQL==1.1.1
+# PostgreSQL (옵션)
+# psycopg2-binary==2.9.10
+
+# === Authentication & Security ===
+python-jose[cryptography]==3.5.0
 passlib[bcrypt]==1.7.4
-psycopg2-binary==2.9.9
-aiofiles==23.2.1
-jinja2==3.1.2 
+python-multipart==0.0.20
+
+# === File Handling ===
+aiofiles==24.1.0
+python-magic==0.4.27
+pillow==11.2.1
+
+# === Utilities ===
+python-dotenv==1.1.1
+pytz==2025.2
+
+# === Development Tools ===
+pytest==8.4.1
+pytest-asyncio==1.0.0
+httpx==0.28.1
+
+# === Production ===
+gunicorn==23.0.0
